2010-12-27 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: (Spec): add 'Custom' to License. Add new field
	'License-Text'.

2010-12-25 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-url-encode): New.
	(epackage-info-mode-tab-wiki): Add Google search.
	(epackage-info-mode-pcomplete-list): Remove
	`pcomplete-default-completion-function'.
	(epackage--info-mode-completions-section): New.
	(epackage-info-mode-completions-section-initialize): New.

2010-12-24 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--info-mode-completions-status): Rename.
	(epackage--info-mode-completions-license): Rename.
	(epackage--info-mode-completions-current): Rename.
	(epackage-info-mode-pcomplete-list): New.
	(epackage-info-mode-set-variables): add `tab-stop-list'.
	(epackage-info-mode-tab): Improve handling of 'Description:'.
	(epackage-info-mode-tab-wiki): New.

2010-12-23 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-cmd-upgrade-all-packages): Delay
	`epackage--install-action-list' action "boot" until end.
	(epackage-mail-buffer-name): New.
	(epackage-info-mode-cmd-email-maintainer): New.
	(epackage-info-mode-cmd-email-upstream): New.
	(package-info-mode-status-completions): New.
	(epackage-info-mode-pcomplete-arguments): New.
	(epackage-info-mode-pcomplete-default-completion): New.
	(epackage-info-mode-pcomplete-variables): New.
	(epackage-field-name): New.
	(package-info-mode-current-completions): New.
	(epackage-info-mode-tab): New.

2010-12-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (Project details, References): Add ripdoc, t2html.

	* Makefile (clean, install): adjust documentation strings.

	* epackage.el
	(top level): Don't require autorevert.el, forward declare its
	variables. Add autoload for `mail-setup'.
	(epackage-turn-on-auto-revert-mode): Check
	variables with `boundp'.
	(epackage-depends-parse-string): Correct variable name.
	(epackage-git-status-data): Correct variable name.